Fix text align

--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -141,6 +141,13 @@ hr {
     .section__title {
         text-align: center;
     }
+
+    .measuers__content > .measure {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -157,6 +164,7 @@ hr {
     .destination {
         background: url('../../assets/destination/background-destination-tablet.jpg') center no-repeat;
         background-size: cover;
+        text-align: center;
     }
 }
 
@@ -164,5 +172,9 @@ hr {
     .destination {
         background: url('../../assets/destination/background-destination-mobile.jpg') center no-repeat;
         background-size: cover;
+    }
+
+    .destination__content {
+        padding: 20px;
     }
 }
